# TimeSeries

./: .gitignore  CONTRIBUTING.md  ReadMe.md  analysis_results.md  api_documentation.md  arima.py  causality_logic.py  correlation.py  correlation_test.py  granger.py  main.py  model_results_agent.py  package_structure.md  requirements.txt  stationary_checks.py  test.ipynb
examples/: Autogluon.ipynb  CausalityLogic.ipynb  Stationarity_checks.ipynb  VectorAutoRegression.ipynb  arima.ipynb  causality_class.ipynb  correlation_class.ipynb  data.pkl  main_py.ipynb  var.ipynb  var_model.ipynb
src/: causality_logic.py  correlation.py  data.py  granger.py  main.py  stationarity.md  (+1 more)
timeseriestools/: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_DEV.md  check_package.py  generate_data.py  install.bat  install.sh  install_test.py  minimal_test.py  pyproject.toml  pytest.ini  quickstart.py  requirements-dev.txt  requirements.txt  setup.py  setup_dev.bat  setup_dev.sh  setup_fresh.py  setup_package.bat  setup_package.sh  verify_install.py
timeseriestools/examples/: README.md  package_test.py  requirements-examples.txt  run_test.bat  run_test.sh
timeseriestools/tests/: conftest.py  test_analyze.py  test_causality.py  test_correlation.py  test_data.py  test_stationarity.py
timeseriestools/timeseriestools/: __init__.py  __init__.pyi  _version.py  analyze.py  causality.py  correlation.py  data.py  stationarity.py
timeseriestools/timeseriestools/test_data/: __init__.py  generate_test_data.py
timeseriestools/timeseriestools/utils/: __init__.py  granger.py
(+66 files in other folders)
